<?xml version="1.0"?>
<package format="2">
  <name>siar_driver</name>
  <version>0.0.0</version>
  <description>The siar_driver package</description>

  <maintainer email="dalete@upo.es">David Alejo</maintainer>


  <license>BSD</license>


  <author email="daletei@upo.es">David Alejo Teissière</author>
  <author email="noeperez@upo.es"> Noé Perez Higueras </author>
  <author email="iperde@upo.es">Ignacio Pérez de Hurtado</author>
  <author email="rramvig@upo.es">Rafael Ramón Vigo</author>
  <author email="fcaballero@us.es">Fernando Caballero Benítez</author>
  <author email="lmercab@upo.es">Luis Merino Cabañas</author>
  <author email="cmarques@idmind.pt">Carlos Alberto Fernandes da Silva Marques</author>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>arduimu_v3</depend>
  <depend>functions</depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>siar_msgs</build_export_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
